--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "nyc": "^10.0.0"
   },
   "dependencies": {
+    "eslint": "^3.13.1",
+    "eslint-config-carpages": "^0.2.0",
     "path-exists": "^3.0.0",
     "resolve-pkg": "^0.2.0"
   },
