--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 .nyc_output
 node_modules
 yarn.lock
+!fixtures/grunt/no-taskfile-pkg-exists/node_modules
+!fixtures/gulp/no-taskfile-pkg-exists/node_modules
