--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .nyc_output
 node_modules
 yarn.lock
-!test/fixtures/grunt/no-taskfile-pkg-exists/node_modules
-!test/fixtures/gulp/no-taskfile-pkg-exists/node_modules
+!test/fixtures/**/node_modules
+!test/fixtures/**/node_modules
