--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "license": "MIT",
   "repository": "jwandrews/has-task-runner",
   "author": "Jeff Andrews <jeff.andrews@carpages.ca>",
+  "files": [
+    "index.js"
+  ],
   "devDependencies": {
     "ava": "^0.24.0",
     "eslint": "^4.12.0",
