Fix ava complaining about no tests found in fixture files.

--- a/package.json
+++ b/package.json
@@ -10,17 +10,32 @@
     "index.js"
   ],
   "devDependencies": {
-    "eslint": "^6.0.0",
-    "eslint-config-carpages": "^3.1.1",
-    "ava": "^1.0.1",
+    "ava": "^2.2.0",
+    "babel-eslint": "10.x",
+    "eslint": "6.0.1",
+    "eslint-config-carpages": "3.2.0-alpha.1",
+    "eslint-config-standard": "12.x",
+    "eslint-plugin-flowtype": "3.x",
+    "eslint-plugin-import": "2.x",
+    "eslint-plugin-node": "9.1.0",
+    "eslint-plugin-promise": "4.x",
+    "eslint-plugin-react": "7.x",
+    "eslint-plugin-requirejs": "4.0.0",
+    "eslint-plugin-standard": "4.x",
     "nyc": "^14.0.0"
   },
   "dependencies": {
-    "path-exists": "^3.0.0",
+    "path-exists": "^4.0.0",
     "resolve-pkg": "^2.0.0"
   },
   "scripts": {
     "test": "ava",
     "coverage": "nyc ava"
+  },
+  "ava": {
+    "files": [
+			"test/**/*",
+			"!test/fixtures"
+		]
   }
 }
