--- a/package.json
+++ b/package.json
@@ -12,16 +12,8 @@
   "devDependencies": {
     "ava": "^2.2.0",
     "babel-eslint": "10.x",
-    "eslint": "6.6.0",
-    "eslint-config-carpages": "4.0.1",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-plugin-flowtype": "^4.0.0",
-    "eslint-plugin-import": "2.x",
-    "eslint-plugin-node": "10.0.0",
-    "eslint-plugin-promise": "4.x",
-    "eslint-plugin-react": "7.x",
-    "eslint-plugin-requirejs": "4.0.0",
-    "eslint-plugin-standard": "4.x",
+    "eslint": "6.x",
+    "eslint-config-carpages": "4.x",
     "nyc": "^14.0.0"
   },
   "dependencies": {
